[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate Enterprise Sample - Product Tracking example pallet'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-product-tracking'
repository = 'https://github.com/paritytech/substrate/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

# [dependencies.fixed]
# default-features = false
# git = "https://github.com/encointer/substrate-fixed"
# package = "substrate-fixed"

[dependencies.product-registry]
default-features = false
git = 'https://github.com/stiiifff/pallet-product-registry'
package = 'pallet-product-registry'
version = '0.0.1'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'system/std',
    'timestamp/std',
    'product-registry/std'
]
